--- a/views/user/viewOrders.hbs
+++ b/views/user/viewOrders.hbs
@@ -10,19 +10,23 @@
                     <nav class="header__menu">
                         <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
-                            {{!-- <li><a href="#">Women’s</a></li> --}}
-                            {{!-- <li><a href="#">Men’s</a></li> --}}
-                            <li><a href="/users/shop">Shop</a></li>
+                        
+                            <li><a href="/users">Shop</a></li>
                             <li><a href="/users/viewOrder">Orders</a>
                                 <ul class="dropdown">
-                                    {{!-- <li><a href="./product-details.html">Product Details</a></li> --}}
-                                    {{!-- <li><a href="./shop-cart.html">Shop Cart</a></li> --}}
+                                  
                                     <li><a href="./checkout.html"></a></li>
                                     <li><a href="./blog-details.html"></a></li>
                                 </ul>
                             </li>
                             <li><a href="./blog.html">About us</a></li>
                             <li><a href="./contact.html">Contact</a></li>
+                              <li>
+                                <form action="/users/searchProduct" method="post" class="form-inline mr-auto">
+            <input class="form-control mr-sm-2" name="search" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-unique btn-rounded btn-sm my-0" type="submit">Search</button>
+                               </form>
+                        </li>
                         </ul>
                     </nav>
                 </div>
@@ -36,7 +40,6 @@
                             {{/if}}
                         </div>
                         <ul class="header__right__widget">
-                            <li><span class="icon_search search-switch"></span></li>
                             <li><a href="/users/wishlist"><span class="icon_heart_alt"></span>
                                 <div id="wishlist-count" class="tip">{{wishlistCount}}</div>
                             </a></li>
@@ -91,7 +94,6 @@
                                                 <td>{{this.status}}</td>
                                                  <td>{{../this.created}}</td>
                                                   <td>{{this.subTotal}}</td>
-                                            {{!-- <td>  <button class="btn btn-danger" onclick="cancel('{{this._id}}')">View Product</button></td> --}}
                                                     <td><a href="/users/singleOrderView/{{this._id}}">view Order</a></td>
                                                  
                                             </tr>
@@ -134,7 +136,7 @@
     border: 0px solid transparent;
     border-radius: 0px;
 }
-}
+
 
 .card-body {
     -webkit-box-flex: 1;
