--- a/views/admin/allOrders.hbs
+++ b/views/admin/allOrders.hbs
@@ -150,7 +150,7 @@
 							</td>
 							
 							<td>
-								<a href="#">{{../this.totalAmount}}</a>
+								<a href="#">{{../this.totalAfterDiscounts}}</a>
 							</td>
 							
 							 <td >
