--- a/views/admin/orderDeteils.hbs
+++ b/views/admin/orderDeteils.hbs
@@ -22,7 +22,8 @@
            <div> <select onchange="changeStatus('{{this._id}}','{{../result.userId}}')"  name="brand"class="table-link danger btn btn-primary mt-3" id="exampleSelectGender1">
                         <option >{{this.status}}</option>
                         <option  value="1" >Shipped</option>
-                                        <option value="2" >Delivered</option></div>
+                                        <option value="2" >Delivered</option>
+										</div>
         {{/each}}
      
        
