--- a/views/user/productViewPage.hbs
+++ b/views/user/productViewPage.hbs
@@ -64,10 +64,10 @@
 <div class="container-fluid mt-3 mb-3">
     <div class="row g-2">
         {{#each data}}
-        <div class="col-md-4 d-flex justify-content-center" >
-            <div class="card" style="width: 380px ;">
+        <div class="col-md-4 d-flex " >
+            <div class="card align-items-center" style="width: 380px ;">
                 <div class="img-container">
-                                       <div class="d-flex justify-content-center align-items-center p-2 first"> <span class="percent">-{{this.discount}}%</span>  </div> <img class="d-flex justify-content-center align-items-center " style="margin-left: 60px" src="/uploads/{{this.images.[0].img1}}" class="img-fluid">
+                                       <div class="d-flex justify-content-center align-items-center p-2 first"> <span class="percent">-{{this.discount}}%</span>  </div> <img class="d-flex justify-content-center align-items-center "  src="/uploads/{{this.images.[0].img1}}" class="img-fluid">
 
                 </div>
                 <div class="product-detail-container">
@@ -77,7 +77,7 @@
                     <div class="d-flex justify-content-between align-items-center mt-2">
                         <div class="ratings"> <i class="fa fa-star"></i> <span>4.5</span> </div>
                     </div>
-                    <div class="mt-3 d-flex justify-content-between"> <button class="btn btn-danger btn-block">Buy Now</button> <button class="btn btn-danger btn-block" style="margin-left: 5px" onclick="addToCart('{{this._id}}')">add To Cart</button> </div>
+                    <div class="mt-3 d-flex justify-content-between"> <button class="btn btn-danger btn-block" style="margin-left: 5px" onclick="addToCart('{{this._id}}')"> To Cart</button> </div>
                 </div>
             </div>
         </div>
