--- a/views/user/searchProduct.hbs
+++ b/views/user/searchProduct.hbs
@@ -63,9 +63,9 @@
     <div class="row g-2">
         {{#each data}}
         <div class="col-md-4 d-flex justify-content-center" >
-            <div class="card" style="width: 380px ;">
+            <div class="card">
                 <div class="img-container">
-                                       <div class="d-flex justify-content-center align-items-center p-2 first"> <span class="percent">-{{this.discount}}%</span>  </div> <img class="d-flex justify-content-center align-items-center " style="margin-left: 60px" src="/uploads/{{this.images.[0].img1}}" class="img-fluid">
+                                       <div class="d-flex justify-content-center align-items-center p-2 first"> <span class="percent">-{{this.discount}}%</span>  </div> <img class="d-flex justify-content-center align-items-center "  src="/uploads/{{this.images.[0].img1}}" class="img-fluid">
 
                 </div>
                 <div class="product-detail-container">
