--- a/views/user/viewOrders.hbs
+++ b/views/user/viewOrders.hbs
@@ -58,7 +58,7 @@
     </header>
    
 
-    <div class="container">
+    <div class="container-fluid mt-2">
                       
                                 
                     <div class="row">
